# CAM-CLIENT

./: CMakeLists.txt  README.md  channelwidget.cpp  channelwidget.h  image.qrc  main.cpp  mediaapp.cpp  mediaapp.h  player.cpp  player.h
Header Files/: Subwindow.h  customwidget.h  mediaapp.h  player.h
Source Files/: main.cpp  mediaapp.cpp
src/Header Files/: DraggableDialog.h  mediaapp.h
src/Source Files/: DraggableDialog.cpp  customwidget.cpp  mediaapp.cpp  player.cpp
